# sh_test

./: .gitignore  CMakeLists.txt  build.sh  stat.py  stat.sh
class/: CMakeLists.txt  bunny-mark-ori.js  bunny-mark.c  bunny-mark.ts
number/: CMakeLists.txt  bunny-mark-ori.js  bunny-mark.c  bunny-mark.ts
number_array/: CMakeLists.txt  bunny-mark-ori.js  bunny-mark.c  bunny-mark.ts
